fix spacing

--- a/components/Metric/metric.module.css
+++ b/components/Metric/metric.module.css
@@ -1,5 +1,5 @@
 .metric {
-  margin-top: 150px;
+  margin-top: 100px;
   margin-bottom: 200px;
   background-color: #202226;
   border-radius: 0.5rem;
