--- a/components/Service/service.module.css
+++ b/components/Service/service.module.css
@@ -1,5 +1,10 @@
-.mainService {
-  margin-top: 170px;
+.title {
+  font-size: 2.9rem;
+  text-transform: capitalize;
+  letter-spacing: 0.1875rem;
+  line-height: 3.5rem;
+  font-weight: 700;
+  margin-bottom: 1.5rem;
 }
 
 .service {
